Created get, add, update, delete funct for menus